--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -3,16 +3,25 @@
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
-  including program design, version control, data management,
-  and task automation.
-  Participants will be encouraged to help one another
-  and to apply what they have learned to their own research problems.
-</p>
-<p align="center">
+<p/>
+<p>
   <em>
     For more information on what we teach and why,
     please see our paper
     "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
+</p>
+
+<p>
+<br>
+  The goal of this workshop is to teach novice programmers to write modular code 
+  and best practices for using R for data analysis. 
+  R is commonly used in many scientific disciplines for statistical analysis 
+  and its array of third-party packages. The emphasis of these materials is to give 
+  attendees a strong foundation in the fundamentals of R, and to teach best practices 
+  for scientific computing: breaking down analyses into modular units, task automation, 
+  and encapsulation.
+  <br>
+   This hands-on workshop will focus on teaching the fundamentals of the programming 
+  language R, and will not teach statistical analysis.
 </p>
