--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,6 +1,7 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at graduate students, ECR and other researchers who would like to 
+  learn about R.
   <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
